# RADix-OS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  settings.ci.json  settings.json  settings.terminal.json  settings.wm.json
.githooks/: README.md  commit-msg  pre-commit
.github/workflows/: ci.yml  provenance.yml
RADKernel/: CMakeLists.txt
RADKernel/boards/: README.md
RADKernel/boards/zuboard_1cg/: boot.S  kernel.cpp  linker.ld
RADKernel/boot/: radboot.cpp  radboot.h
RADKernel/core/: RADKernel.cpp  RADKernel_runtime.cpp
RADKernel/drivers/: README.md
RADKernel/drivers/net/: gem_cadence.cpp
RADKernel/fs/: README.md  ext2.cpp  ext2.h  ext4.cpp  ext4.h  fat.cpp  fat.h
RADKernel/hal/circle/: radkernel_hal_circle.cpp  radkernel_runtime_newlib.cpp
RADKernel/hal/rp235x_pico/: radkernel_hal_rp235x.cpp
RADKernel/headers/radkernel/: rad_audio.h  rad_block.h  rad_cpp.h  rad_device.h  rad_display.h  rad_dma.h  rad_event.h  rad_i2c.h  rad_input.h  rad_ioctl.h  rad_irq.h  rad_memory.h  rad_module.h  rad_mutex.h  rad_net.h  rad_overlay.h  rad_posix.h  rad_pty.h  rad_service.h  rad_spi.h  rad_task.h  rad_terminal.h  rad_time.h  rad_tree.h  rad_tty.h  rad_usb.h  rad_vfs.h  radkernel.h
RADKernel/runtime/: README.md  freestanding_runtime.cpp
RADKernel/subsystems/: RADOverlayRuntime.cpp
RADixKernel/: CMakeLists.txt
RADixKernel/boards/: README.md
RADixKernel/boot/: radboot.cpp  radboot.h
RADixKernel/core/: RADixKernel.cpp  RADixKernel_embedded.cpp  RADixKernel_overlay.cpp  RADixKernel_runtime.cpp
RADixKernel/drivers/: README.md
RADixKernel/drivers/net/: gem_cadence.cpp
RADixKernel/fs/: README.md  ext2.cpp  ext2.h  ext4.cpp  ext4.h  fat.cpp
RADixKernel/hal/bcm283x/: radixkernel_hal_bcm283x.cpp
RADixKernel/hal/circle/: radixkernel_hal_circle.cpp  radixkernel_runtime_newlib.cpp
RADixKernel/hal/rp235x_pico/: radixkernel_hal_rp235x.cpp
RADixKernel/headers/radixkernel/: rad_audio.h  rad_block.h  rad_cpp.h  rad_device.h  rad_display.h  rad_dma.h  rad_event.h  rad_i2c.h  rad_input.h  rad_ioctl.h  rad_irq.h  rad_memory.h  rad_module.h  rad_mutex.h  rad_net.h  rad_overlay.h  rad_posix.h  rad_pty.h  rad_service.h  rad_spi.h  rad_task.h  rad_terminal.h  rad_time.h  rad_tree.h  rad_tty.h  rad_vfs.h  radixkernel.h
RADixKernel/runtime/: README.md  freestanding_runtime.cpp
RADixKernel/subsystems/: RADixOverlayRuntime.cpp
abi/: RADKernel.symbols  RADixKernel.symbols
docs/: Doxyfile
docs/public/: api-groups.md  api-structure.md  architecture.md  crimson-status.md  device-tree.md  getting-started.md  mainpage.md  networking.md  pi-zero2w.md  radbuild.md  radcompositor.md  zuboard-1cg-handoff.md  zuboard-1cg.md
libs/: README.md
libs/libncurses-rad/: README.md  libncurses_rso.c
libs/libncurses-radix/: README.md  libncurses_rso.c
libs/libradc/: README.md  rad_libc.c
libs/libradixc/: README.md  radix_libc.c
scripts/: verify-provenance.sh
services/RADCompositor/: RADCompositor.slint  RADCompositorCore.cpp  RADCompositorCore.h  RADCompositorModel.cpp  RADCompositorModel.h  RADCompositorTier.cpp  RADCompositorTier.h  README.md  SlintShell.cpp  SlintShell.h
services/RADDNSResolver/: README.md  dns_resolver_service.c
services/RADNetwork/: README.md  network_service.c
services/RADServiceManager/: README.md  radinit.c  radinit_entry.S
services/RADTimeSync/: README.md  time_sync_service.c
tests/: CMakeLists.txt  rad_kernel_tests.cpp  radix_kernel_tests.cpp
tests/userspace/: README.md  libc_rso_stress.c  posix_stress.c  radsh_asm.S  signal_stress.c  sleep_stress.c  terminal_stress.c  tinfo_rso_stress.c  tty_stress.c  tui_stress.c  tui_stress_dyn.c
tools/: radoverlay_compile.py
tools/embedded/: README.md  build_circle.sh  build_x86_64_grub_terminal_variants.sh  circle_env.sh  fetch_slint_source.sh  make_rad_rootfs_ext4.sh  make_radix_rootfs_ext4.sh  qemu_aarch64_env.sh  qemu_pizero2w_smoke.sh  rad_pi_zero2w_smoke.sh  radix_pi_zero2w_smoke.sh  (+9 more)
tools/embedded/rad_os_shell/: CMakeLists.txt  RADixDesktopShell.cpp  RADixDesktopShell.h  main.cpp  shell.slint
tools/embedded/rp235x_pico/: CMakeLists.txt  main.cpp
tools/embedded/x86_64_grub_slint/: CMakeLists.txt  boot.S  grub.cfg  hal_x86_64.cpp  host_udp_ntp_responder.py  install_rootfs_tree.py  kernel.cpp  linker.ld  make_rkconfig.py  run_host_terminal_stress.sh  runtime.cpp  slint_shell.cpp  slint_shell.h  test_script.sh  user_auth.c  user_init.S  user_login.c  user_radgfx.S  user_radinit.c  user_radsh.S  user_radsh.c  user_sh.S  x86_cpu.S  x86_cpu.cpp  x86_cpu.h  x86_ext2.cpp  x86_ext4.cpp  x86_fat.cpp  x86_fat.h  x86_storage.cpp  x86_storage.h  x86_user.cpp  x86_user.h  x86_vm.cpp  x86_vm.h
tools/embedded/x86_64_grub_slint/ports/nano/: rad_nano.c  rad_nano_entry.S  radix_nano.c  radix_nano_entry.S
tools/embedded/x86_64_grub_slint/ports/upstream/: build_upstream_nano.sh  build_upstream_ncurses.sh  build_upstream_vim_tiny.sh  rad-config.site  rad-ncurses-config.site  radix-config.site  radix-ncurses-config.site
tools/embedded/x86_64_grub_slint/ports/vim/runtime/: defaults.vim
tools/embedded/x86_64_grub_slint/services/: base-terminal.json  boot-session.json.in  dns-resolver.json  fatfs.json  network-smoke.json  network.json  storage-root.json  terminal-stress.json.in  time-sync.json  userspace-shell.json  userspace-shell.json.in
tools/embedded/x86_64_grub_slint/sysroot/include/: assert.h  ctype.h  curses.h  errno.h  features.h  float.h  getopt.h  glob.h  limits.h  locale.h  math.h  poll.h  pwd.h  regex.h  search.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  term.h  termios.h  time.h  unistd.h  utime.h  wchar.h  wctype.h
tools/embedded/x86_64_grub_slint/sysroot/include/radix/: syscalls.h
tools/embedded/x86_64_grub_slint/sysroot/include/sys/: ioctl.h  stat.h  time.h  types.h  wait.h
tools/embedded/x86_64_grub_slint/sysroot/lib/: radix_libc.c
tools/embedded/x86_64_grub_slint/terminfo/: rad.terminfo  radix.terminfo
tools/embedded/x86_grub/: CMakeLists.txt  boot.S  grub.cfg  kernel.cpp  linker.ld
userland/: README.md
(+142 files in other folders)
